# ml-driver

./: .gitignore  README.md  pyproject.toml  runner.js  script.py
examples/: interactive_translator.py  summarize_article.py  translate_article.py
src/firefox_inference/: __init__.py  runner.js
