[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firefox-inference"
version = "0.1.0"
description = "Drive Firefox's ML and translations engines from Python via Selenium"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
authors = [{ name = "Greg", email = "" }]
dependencies = [
  "selenium>=4.0",
]
keywords = ["firefox", "selenium", "machine-learning", "translations"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gregtatum/ml-driver"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"firefox_inference" = ["runner.js"]
